// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ObjectInspector passes \`nodeRenderer\` prop to <TreeView/> 1`] = `
<ThemeProvider
  theme="chromeLight"
>
  <TreeView
    dataIterator={[Function]}
    name={undefined}
    nodeRenderer={[Function]}
    theme="chromeLight"
  />
</ThemeProvider>
`;

exports[`ObjectInspector should render 1`] = `
<ThemeProvider
  theme="testvalue"
>
  <TreeView
    dataIterator={[Function]}
    name={undefined}
    nodeRenderer={[Function]}
    theme="testvalue"
  />
</ThemeProvider>
`;
